--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
         with:
           node-version: "16.x"
       - run: npm ci
-      - run: npm run format:check
+      - run: npm run format-check
       - run: npm test -- --coverage
         env: 
           CI: true
