--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -10,11 +10,11 @@ jobs:
       - name: Use NodeJS
         uses: actions/setup-node@v1
         with:
-          node-version: "16.x"
+          node-version: "18.14.0"
       - run: npm ci
       - run: npm run format-check
       - run: npm test -- --coverage
-      
+
         env: 
           CI: true
       
